--- a/css/main.css
+++ b/css/main.css
@@ -1168,7 +1168,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #f7c66e;
+  background: #9dafff;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
